# agent-browser

./: CHANGELOG.md  package.json
.changeset/: fix-github-release.md  release-a4286641.md
.github/workflows/: release.yml
cli/: Cargo.toml
cli/src/: commands.rs  flags.rs  main.rs  output.rs
docs/: next.config.mjs
docs/src/app/api/docs-chat/: route.ts
src/: browser.test.ts  browser.ts  protocol.test.ts  protocol.ts  types.ts
